# tetris

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/: board.py  game.py  main.py  tetromino.py  utils.py
src/tetris/: board.py  game.py  main.py  tetromino.py
tests/: test_board.py  test_game.py  test_tetromino.py
