[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris"
version = "0.1.0"
description = "A graphical Tetris game in Python"
requires-python = ">=3.12"
dependencies = [
    "pygame"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]